Fix alignment of empty state button label

--- a/less/components/result-status.less
+++ b/less/components/result-status.less
@@ -131,7 +131,7 @@
     vertical-align: middle;
 }
 
-.empty-state-content span {
+.empty-state-content > span {
     padding-left: 15px;
 }
 .progress-spinner.queued path {
